--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,139 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
+    width: 40%;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App h1 {
+    font-size: 3rem;
+    text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.listTask {
+    display: flex;
+    flex-direction: column;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.singleTask {
+    padding: 15px;
+    margin: 10px 0;
+    border: 1px solid black;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: 0.3s all;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.App-link {
-  color: #61dafb;
+.singleTask .options {
+    display: flex;
+    margin-left: 30px;
+    font-size: 1.2rem;
+    align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.singleTask .options i:nth-child(2) {
+    margin: 0 10px;
+}
+
+.singleTask .info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.singleTask .info h3 {
+    font-size: 1.5rem;
+}
+
+.singleTask .info p {
+    font-size: 1.2rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    word-break: break-word;
+}
+
+.singleTask .info.done p,
+.singleTask .info.done h3 {
+    text-decoration: line-through 2px;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+    position: fixed;
+    left: 50%;
+    top: 50px;
+    transform: translateX(-50%);
+    z-index: 999;
+    padding: 20px;
+    background-color: white;
+    border-radius: 5px;
+}
+
+.form .formBtn {
+    align-self: flex-end;
+    display: flex;
+    align-items: center;
+    margin-top: 5px;
+}
+
+button {
+    background-color: rgb(48, 131, 134);
+    border: none;
+    border-radius: 10px;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
+    color: white;
+}
+
+button:hover {
+    background-color: rgb(3, 168, 113);
+}
+
+input,
+textarea {
+    margin: 10px 0;
+    padding: 10px 15px;
+}
+
+textarea {
+    height: 100px;
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.createBtn {
+    display: block;
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: rgb(48, 131, 134);
+    color: white;
+    border-radius: 10px;
+    border: none;
+}
+
+.createBtn:hover {
+    background-color: rgb(3, 168, 113);
 }
